Update and rename catalog.html to index.html

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </header>
     <main>
       <div class="menu-buttons">
-        <a href="catalog.html" class="menu-button active"><h2>Каталог</h2></a>
+        <a href="index.html" class="menu-button active"><h2>Каталог</h2></a>
         <a href="my-items.html" class="menu-button"><h2>Мои Товары</h2></a>
       </div>
       <section class="catalog">
@@ -35,3 +35,4 @@
     </footer>
   </body>
 </html>
+
